--- a/AGameE/AGameE.vcxproj.filters
+++ b/AGameE/AGameE.vcxproj.filters
@@ -1,39 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="头文件">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="资源文件">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Temp">
+      <UniqueIdentifier>{bd705715-c1a6-4692-9dd8-93a62c5544b9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\MyGCC_Project\MyGCC_Project\Exception.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\MyGCC_Project\MyGCC_Project\Utility.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
+    <ClInclude Include="Source\Common\Utility.h" />
+    <ClInclude Include="Source\Debug\Debugger.h" />
+    <ClInclude Include="Source\Debug\Exception.h" />
+    <ClInclude Include="Source\Debug\Logger.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\MyGCC_Project\MyGCC_Project\Debugger.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\MyGCC_Project\MyGCC_Project\Exception.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\MyGCC_Project\MyGCC_Project\Logger.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\MyGCC_Project\MyGCC_Project\Utility.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+    <ClCompile Include="Source\Common\Utility.cpp" />
+    <ClCompile Include="Source\Debug\Exception.cpp" />
   </ItemGroup>
 </Project>
