--- a/AGameE/AGameE.vcxproj.filters
+++ b/AGameE/AGameE.vcxproj.filters
@@ -6,13 +6,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Main\Main.cpp" />
+    <ClCompile Include="Source\Common\Utility.cpp" />
+    <ClCompile Include="Source\Debug\Exception.cpp" />
+    <ClCompile Include="Source\Main\Init.cpp" />
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="Source\Common\Utility.h" />
     <ClInclude Include="Source\Debug\Debugger.h" />
     <ClInclude Include="Source\Debug\Exception.h" />
     <ClInclude Include="Source\Debug\Logger.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Source\Common\Utility.cpp" />
-    <ClCompile Include="Source\Debug\Exception.cpp" />
+    <ClInclude Include="Source\Main\Init.h" />
   </ItemGroup>
 </Project>
