--- a/AGameE/AGameE.vcxproj.filters
+++ b/AGameE/AGameE.vcxproj.filters
@@ -10,6 +10,8 @@
     <ClCompile Include="Source\Common\Utility.cpp" />
     <ClCompile Include="Source\Debug\Exception.cpp" />
     <ClCompile Include="Source\Main\Init.cpp" />
+    <ClCompile Include="Source\Actor\Actor.cpp" />
+    <ClCompile Include="Source\Actor\ActorFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Common\Utility.h" />
@@ -17,5 +19,8 @@
     <ClInclude Include="Source\Debug\Exception.h" />
     <ClInclude Include="Source\Debug\Logger.h" />
     <ClInclude Include="Source\Main\Init.h" />
+    <ClInclude Include="Source\Actor\Actor.h" />
+    <ClInclude Include="Source\Actor\ActorFactory.h" />
+    <ClInclude Include="Source\Common\Vectors.h" />
   </ItemGroup>
 </Project>
