--- a/AGameE/AGameE.vcxproj
+++ b/AGameE/AGameE.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Source\Debug\Exception.cpp" />
     <ClCompile Include="Source\Main\Init.cpp" />
     <ClCompile Include="Source\Main\Main.cpp" />
+    <ClCompile Include="Source\Process\ProcessManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Actor\Actor.h" />
@@ -40,6 +41,8 @@
     <ClInclude Include="Source\Debug\Logger.h" />
     <ClInclude Include="Source\Debug\MathHelper.h" />
     <ClInclude Include="Source\Main\Init.h" />
+    <ClInclude Include="Source\Process\Process.h" />
+    <ClInclude Include="Source\Process\ProcessManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
