--- a/AGameE/AGameE.vcxproj
+++ b/AGameE/AGameE.vcxproj
@@ -29,9 +29,10 @@
     <ClCompile Include="Source\Main\Init.cpp" />
     <ClCompile Include="Source\Main\Main.cpp" />
     <ClCompile Include="Source\Process\ProcessManager.cpp" />
-    <ClCompile Include="Source\Resource\ResourceFile.cpp" />
+    <ClCompile Include="Source\Resource\Resource.cpp" />
     <ClCompile Include="Source\Sound\DirectSound.cpp" />
-    <ClCompile Include="Source\Sound\Sound.cpp" />
+    <ClCompile Include="Source\Sound\Audio.cpp" />
+    <ClCompile Include="Source\Sound\SoundResource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Actor\Actor.h" />
@@ -52,11 +53,12 @@
     <ClInclude Include="Source\Main\Init.h" />
     <ClInclude Include="Source\Process\Process.h" />
     <ClInclude Include="Source\Process\ProcessManager.h" />
-    <ClInclude Include="Source\Resource\ResourceFile.h" />
     <ClInclude Include="Source\Resource\Resource.h" />
     <ClInclude Include="Source\Resource\ZipFile.h" />
+    <ClInclude Include="Source\Sound\AudioBuffer.h" />
     <ClInclude Include="Source\Sound\DirectSound.h" />
-    <ClInclude Include="Source\Sound\Sound.h" />
+    <ClInclude Include="Source\Sound\Audio.h" />
+    <ClInclude Include="Source\Sound\SoundResource.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
