A Random number genrator.

--- a/AGameE/AGameE.vcxproj.filters
+++ b/AGameE/AGameE.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClCompile Include="Source\Resource\Resource.cpp" />
     <ClCompile Include="Source\Sound\SoundResource.cpp" />
     <ClCompile Include="Source\Process\SoundProcess.cpp" />
+    <ClCompile Include="Source\Common\Math.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Common\Utility.h" />
@@ -48,5 +49,6 @@
     <ClInclude Include="Source\Sound\SoundResource.h" />
     <ClInclude Include="Source\Resource\Resource.h" />
     <ClInclude Include="Source\Process\SoundProcess.h" />
+    <ClInclude Include="Source\Common\Math.h" />
   </ItemGroup>
 </Project>
