--- a/AGameE/AGameE.vcxproj
+++ b/AGameE/AGameE.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Actor\Actor.cpp" />
     <ClCompile Include="Source\Actor\ActorFactory.cpp" />
+    <ClCompile Include="Source\Common\Math.cpp" />
     <ClCompile Include="Source\Common\Timer.cpp" />
     <ClCompile Include="Source\Common\Utility.cpp" />
     <ClCompile Include="Source\Debug\Exception.cpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="Source\Actor\Actor.h" />
     <ClInclude Include="Source\Actor\ActorComponent.h" />
     <ClInclude Include="Source\Actor\ActorFactory.h" />
+    <ClInclude Include="Source\Common\Math.h" />
     <ClInclude Include="Source\Common\Timer.h" />
     <ClInclude Include="Source\Common\TypeDef.h" />
     <ClInclude Include="Source\Common\Utility.h" />
